<resources>
    <string name="app_name">thProj</string>
    <string name="str_start">Food for Everyone</string>
    <string name="btnstart">Get starteed</string>
    <string name="login">Login</string>
    <string name="email">Email address</string>
    <string name="password">Password</string>
    <string name="inputlog">Login</string>
    <string name="forgotpass">Forgot passcode?</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="title_home">Home</string>
    <string name="title_heart">Heart</string>
    <string name="title_user">User</string>
    <string name="title_his">History</string>
    <string name="title_activity_bottom">activity_bottom</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>