<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.thproj.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_heart"
        android:name="com.example.thproj.ui.dashboard.DashboardFragment"
        android:label="@string/title_heart"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_user"
        android:name="com.example.thproj.ui.notifications.NotificationsFragment"
        android:label="@string/title_user"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/navigation_history"
        android:name="com.example.thproj.ui.history.HistoryFragment"
        android:label="@string/title_his"
        tools:layout="@layout/fragment_history" />
</navigation>